feat: add use cases, updated code to manage flowable instead of list and some fixes