@@ -19,23 +19,23 @@ package io.gravitee.apim.core.integration.usecase;
 import io.gravitee.apim.core.integration.crud_service.IntegrationCrudService;
 import io.gravitee.apim.core.integration.domain_service.IntegrationDomainService;
 import io.gravitee.apim.core.integration.model.IntegrationEntity;
-import io.gravitee.apim.core.integration.model.Page;
+import io.gravitee.common.component.Lifecycle;
+import io.gravitee.definition.model.DefinitionContext;
+import io.gravitee.definition.model.DefinitionVersion;
 import io.gravitee.definition.model.v4.ApiType;
 import io.gravitee.definition.model.v4.endpointgroup.Endpoint;
 import io.gravitee.definition.model.v4.endpointgroup.EndpointGroup;
-import io.gravitee.definition.model.v4.listener.Listener;
 import io.gravitee.definition.model.v4.listener.entrypoint.Entrypoint;
 import io.gravitee.definition.model.v4.listener.http.HttpListener;
 import io.gravitee.definition.model.v4.listener.http.Path;
 import io.gravitee.rest.api.model.NewPageEntity;
 import io.gravitee.rest.api.model.PageType;
 import io.gravitee.rest.api.model.v4.api.ApiEntity;
-import io.gravitee.rest.api.model.v4.api.NewApiEntity;
 import io.gravitee.rest.api.service.PageService;
 import io.gravitee.rest.api.service.common.ExecutionContext;
 import io.gravitee.rest.api.service.common.GraviteeContext;
 import io.gravitee.rest.api.service.v4.ApiService;
-import io.reactivex.rxjava3.core.Single;
+import io.reactivex.rxjava3.core.Completable;
 import java.util.Collections;
 import java.util.List;
 import lombok.Builder;
@@ -64,58 +64,58 @@ public class IntegrationImportUsecase {
         return new Output(
             integrationDomainService
                 .fetchEntities(integration, input.entities())
-                .flatMap(entities -> {
-                    entities.forEach(integrationEntity -> importApi(integrationEntity, userId));
-                    return Single.just(true);
-                })
+                .map(integrationEntity -> importApi(integrationEntity, userId, integration.getProvider(), integrationId))
+                .ignoreElements()
         );
     }
 
     @Builder
     public record Input(String integrationId, List<IntegrationEntity> entities, String userId) {}
 
-    public record Output(Single<Boolean> status) {}
+    public record Output(Completable completable) {}
 
-    private ApiEntity importApi(IntegrationEntity entity, String userId) {
+    private ApiEntity importApi(IntegrationEntity entity, String userId, String provider, String integrationId) {
         final ExecutionContext executionContext = GraviteeContext.getExecutionContext();
 
-        NewApiEntity newApiEntity = new NewApiEntity();
-        newApiEntity.setName(entity.getName());
-        newApiEntity.setDescription(entity.getDescription());
-        newApiEntity.setApiVersion(entity.getVersion());
-        newApiEntity.setType(ApiType.FEDERATED);
-
-        newApiEntity.setEndpointGroups(
-            List.of(
-                EndpointGroup
-                    .builder()
-                    .type("federated")
-                    .endpoints(List.of(Endpoint.builder().name("endpoint").type("federated").build()))
-                    .build()
+        var apiEntity = ApiEntity
+            .builder()
+            .apiVersion(entity.getVersion())
+            .definitionVersion(DefinitionVersion.V4)
+            .name(entity.getName())
+            .description(entity.getDescription())
+            .type(ApiType.FEDERATED)
+            .endpointGroups(
+                List.of(
+                    EndpointGroup
+                        .builder()
+                        .type("federated")
+                        .endpoints(List.of(Endpoint.builder().name("endpoint").type("federated").build()))
+                        .build()
+                )
             )
-        );
-
-        newApiEntity.setFlows(Collections.emptyList());
-
-        newApiEntity.setListeners(
-            List.of(
-                HttpListener
-                    .builder()
-                    .entrypoints(Collections.emptyList())
-                    .paths(List.of(Path.builder().host(entity.getHost()).path(entity.getPath()).overrideAccess(true).build()))
-                    .entrypoints(List.of(Entrypoint.builder().type("federated").build()))
-                    .build()
+            .flows(Collections.emptyList())
+            .listeners(
+                List.of(
+                    HttpListener
+                        .builder()
+                        .entrypoints(Collections.emptyList())
+                        .paths(List.of(Path.builder().host(entity.getHost()).path(entity.getPath()).overrideAccess(true).build()))
+                        .entrypoints(List.of(Entrypoint.builder().type("federated").build()))
+                        .build()
+                )
             )
-        );
+            .definitionContext(DefinitionContext.builder().origin(provider).mode(DefinitionContext.MODE_FULLY_MANAGED).build())
+            .state(Lifecycle.State.STOPPED)
+            .build();
 
-        ApiEntity apiEntity = apiService.create(executionContext, newApiEntity, userId);
+        var createdApiEntity = apiService.createWithImport(executionContext, apiEntity, userId);
 
         // Create page
         entity
             .getPages()
             .forEach(page -> {
                 PageType pageType = PageType.valueOf(page.getPageType().name());
-                createPage(apiEntity.getId(), entity.getName(), page.getContent(), pageType, userId);
+                createPage(createdApiEntity.getId(), entity.getName(), page.getContent(), pageType, userId);
             });
 
         log.info("API Imported {}", apiEntity.getId());
